--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=mssc
+spring.datasource.generate-unique-name=false
+spring.datasource.name=blog
+spring.h2.console.enabled=true
