--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=mssc
 spring.datasource.generate-unique-name=false
 spring.datasource.name=blog
 spring.h2.console.enabled=true
+
+logging.level.org.springframework.security = TRACE
